// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
    Lindsay McIntosh, Scottish Political Editor
  </div>
</View>
`;

exports[`2. with the author in the begining 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
    , Environment Editor
  </div>
</View>
`;

exports[`3. with the author at the end 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
    RBS Six Nations, 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Mike Atherton
  </div>
</View>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
     | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Mike Atherton
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
     | 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Alexandra Frean
  </div>
</View>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
    , 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Mike Atherton
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
    , 
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Alexandra Frean
  </div>
</View>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<View>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Camilla Long
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 render-byline__InlineText-sc-8i7rg2-0 gJRFWs"
  >
     
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Mike Atherton
  </div>
  <div
    className="tc-text__TcText-sc-15igzev-0 article-byline__BylineText-ynke2n-0 hgOVOC"
  >
    Alexandra Frean
  </div>
</View>
`;

exports[`7. null with an empty ast 1`] = `null`;
